# button_device

./: .gitignore  README.md
arduino/: arduino.ino
comm_lib/: Cargo.toml
comm_lib/src/: lib.rs  manager.rs
controller/: Cargo.toml  README.md
controller/samples/: button_0.sh  display.sh  new_tab.sh  random_result.sh  test_config.json
controller/src/: main.rs
controller/src/config/: config.rs  mod.rs  rules.rs
demo_app/: Cargo.toml
demo_app/src/: main.rs
models/: cover.blend  cover.stl  mount.blend  mount.stl
