[package]
name = "controller"
version = "0.1.0"
edition = "2021"
authors = ["Ray Britton <raybritton@pm.me"]
description = "Controller program for the button device"
categories = ["hardware-support"]
keywords = ["serialport", "hardware"]
repository = "https://github.com/raybritton/button_device"
homepage = "https://github.com/raybritton/button_device/controller"
license-file = "../LICENSE"
publish = false
readme = "../README.md"

[dependencies]
clap = "2.34.0"
comm_lib = {path = "../comm_lib"}
color-eyre = { verison = "0.5.11", default-features = false }
is_executable = "1.0.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
