[package]
name = "button_board_demo"
version = "0.1.0"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Demo/test app for checking hardware"

[dependencies]
anyhow = "1.0.51"
comm_lib = {path = "../comm_lib"}
pixels-graphics-lib = "0.2.0"
winit = "0.25"
winit_input_helper = "0.10"
